// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should inject layout for a html without block 1`] = `
Object {
  "content": "{% extends \\"special.njk\\" %} <h1 id=\\"lorem-ipsum\\">Lorem ipsum</h1>
<p>dolor sit amet consectetur adipisicing elit. Doloribus, quam. Dicta amet</p>
<p>omnis <strong>accusamus</strong> doloribus sequi laboriosam quaerat</p>
<blockquote>
  <p>inventore enim alias sunt officia nostrum debitis ab</p>
</blockquote>
<pre><code class=\\"language-bash\\">asperiores est, quo libero?
</code></pre>
",
  "data": Object {
    "age": "349",
    "name": "Alex",
    "page": Object {
      "layout": "special.njk",
    },
  },
  "haveAttributes": 1,
  "source": "tests/fixtures/prose.html",
}
`;

exports[`should inject layout for a markdown with block 1`] = `
Object {
  "content": "{% extends \\"default.njk\\" %} {% block content %}<h1 id=\\"lorem-ipsum\\">Lorem ipsum</h1>
<p>dolor sit amet consectetur adipisicing elit. Doloribus, quam. Dicta amet</p>
<p>omnis <strong>accusamus</strong> doloribus sequi laboriosam quaerat</p>
<blockquote>
<p>inventore enim alias sunt officia nostrum debitis ab</p>
</blockquote>
<pre><code class=\\"language-bash\\">asperiores est, quo libero?
</code></pre>
{% endblock %}",
  "data": Object {
    "age": "349",
    "name": "Alex",
    "page": Object {
      "layout": "default",
    },
  },
  "haveAttributes": 1,
  "source": "tests/fixtures/prose.md",
}
`;
